--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-agp = "8.2.2"
+agp = "8.5.2"
 android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "34"
 androidx-activityCompose = "1.9.3"
 androidx-lifecycle = "2.8.2"
-compose-plugin = "1.6.11"
+compose-multiplatform = "1.6.11"
 kotlin = "2.0.21"
 navigation = "2.8.0-alpha10"
 kotlinx-serialization = "1.7.3"
@@ -13,6 +13,7 @@ landscapist = "2.4.2"
 koin = "4.0.0"
 koinCompose = "4.0.0"
 ktor = "3.0.1"
+kotlinxDatetime = "0.6.0"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -31,11 +32,11 @@ ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-network = { module = "io.ktor:ktor-network", version.ref = "ktor" }
 ktor-networkTLS = { module = "io.ktor:ktor-network-tls", version.ref = "ktor" }
 
-
-
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
+
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 
 # Coil
 coil3 = { module = "com.github.skydoves:landscapist-coil3", version.ref = "landscapist" }
@@ -43,7 +44,7 @@ coil3 = { module = "com.github.skydoves:landscapist-coil3", version.ref = "lands
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
-jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
+composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
